[package]
edition = "2021"
name = "spb_arrival_bot"
version = "0.1.0"
authors = ["Egor Markov <mark_ee@live.com>"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bincode = "1.3"
chrono = "0.4"
convert_case = "0.6"
gtfs-rt = "0.3"
lazy_static = "1.4"
log = "0.4"
log4rs = "1.2"
prost = "0.11"
reqwest = {version = "0.11", features = ["json"]}
serde = "1.0"
serde_yaml = "0.9"
sled = "0.34"
teloxide = {version = "0.12", features = ["macros", "sqlite-storage"]}
tempfile = "3.4"
tokio = {version = "1.26", features = ["full"]}
zip = "0.6"
